--- a/index.css
+++ b/index.css
@@ -15,17 +15,9 @@ body { width: 100vw; height: 100vh; background-color: #f4f4f4; }
     align-items: center;
 }
 
-#today-color > .container-btn {
-    position: relative;
-    width: 100%;
-    height: 30%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.container-btn > .btn-done {
+#today-color > .btn-done {
+    width: auto;
+    height: auto;
     padding: 2% 4%;
 
     font-size: 10vw;
@@ -38,6 +30,6 @@ body { width: 100vw; height: 100vh; background-color: #f4f4f4; }
     background-color: #f4f4f4;
 }
 
-.container-btn > .btn-done:hover {
+#today-color > .btn-done:hover {
     background-color: #d5d5d5;
 }
